tests/ui/traits/const-traits/inline-incorrect-early-bound-in-ctfe.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/inline-incorrect-early-bound-in-ctfe.rs:11:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0049]: method `foo` has 1 type parameter but its trait declaration has 0 type parameters
  --> $DIR/inline-incorrect-early-bound-in-ctfe.rs:20:12
   |
LL |     fn foo(self);
   |           - expected 0 type parameters
...
LL |     fn foo<T>(self) {
   |            ^ found 1 type parameter

error[E0015]: cannot call non-const fn `<() as Trait>::foo` in constant functions
  --> $DIR/inline-incorrect-early-bound-in-ctfe.rs:27:8
   |
LL |     ().foo();
   |        ^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 2 previous errors; 1 warning emitted

Some errors have detailed explanations: E0015, E0049.
For more information about an error, try `rustc --explain E0015`.
